--- a/Entra21/Modulo_10/20231114_Aula01/src/pages/Home/styles.css
+++ b/Entra21/Modulo_10/20231114_Aula01/src/pages/Home/styles.css
@@ -11,11 +11,12 @@ main{
     height: 486px;
     top: 64px;
     left: 199px;
-    justify-content: center;
-    align-items: center;
+    
 }
 
-img{
+header{
+    margin-left: auto;
+    margin-right: auto;
     width: 350px;
     height: 238px;
     top: 64px;
@@ -23,20 +24,19 @@ img{
 }
 
 h1{
+    margin-left: auto;
+    margin-right: auto;
     font-family: 'Dosis', sans-serif;
     font-size: 32px;
     font-weight: 500;
     line-height: 40px;
     letter-spacing: 0em;
-    text-align: center;
     color: #3F3D56;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     width: 494px;
     height: 40px;
     top: 334px;
-    left: 265px;
-
-    
+    left: 265px;  
 }
 
 strong{
@@ -44,20 +44,22 @@ strong{
 }
 
 section{
-    width: 540px;
-    height: 107px;
-    top: 390px;
-    left: 249px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h2{    
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
-    font-weight: 400;
+    font-weight: 700;
     line-height: 22px;
     letter-spacing: 0em;
     text-align: center;
     color: #828282;
+    width: 540px;
+    height: 107px;
+    top: 390px;
+    left: 249px;
 }
 
 em{
